Single event Carousel

--- a/themes/csl/sass/_owl-theme-default.scss
+++ b/themes/csl/sass/_owl-theme-default.scss
@@ -71,8 +71,9 @@
   }
   
   width: 100%; 
-  -webkit-tap-highlight-color: transparent; }
-  .owl-theme .owl-dots .owl-dot {
+  -webkit-tap-highlight-color: transparent;
+}
+.owl-theme .owl-dots .owl-dot {
     display: inline-block;
     zoom: 1;
     *display: inline; }
@@ -94,4 +95,20 @@
       border-radius: 30px; }
     .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
       border: none;
-      background: white; }
+      background: white; 
+}
+/**
+ * Owl Carousel v2.2.1
+ * Copyright 2013-2017 David Deutsch
+ * Licensed under  ()
+ */
+/*
+ * 	Default theme - Owl Carousel CSS File
+ */
+ .owl-theme-event-main .owl-nav {
+  &.disabled {
+    display: none;
+  }
+  
+  -webkit-tap-highlight-color: transparent;
+}
