removed extra white spaces and unnessecary css

--- a/themes/csl/sass/_contact-page.scss
+++ b/themes/csl/sass/_contact-page.scss
@@ -1,5 +1,4 @@
-
-// contact page //
+// CONTACT PAGE //
 .page-template-contact{
 	.entry-content{
 		>p{
@@ -199,7 +198,6 @@
 /*	disables response output	 */
 div.wpcf7-response-output, div.wpcf7-validation-errors { display: none !important; }
 
-//contact desktop//
 @media screen  and (min-width:$desktop-width) {
 	.page-template-contact{
 		.entry-content{
