--- a/themes/csl/sass/_variables.scss
+++ b/themes/csl/sass/_variables.scss
@@ -31,10 +31,7 @@ $red:#D91F18;
 $alt-gray:#d3d3d3;
 $trans-black: rgba(0,0,0,0.5);
 
-// Typography
-
-// $font__size:
-// $font__h1: 
+// Typography //
 $font__main: 'Lato', sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
