--- a/themes/csl/sass/_weekly-events.scss
+++ b/themes/csl/sass/_weekly-events.scss
@@ -1,5 +1,4 @@
-
-//weekly events//
+// WEEKLY EVENTS //
 .term-weekly{
 	.weekly-event-page-title{
 		padding-left:2%;
@@ -58,12 +57,16 @@
 		}
 	}
 
-	.entry-title-wrapper { transition: 1s; }
+	.entry-title-wrapper{
+		transition: 1s;
+	 }
+
 	.entry-title-wrapper:hover{
 		height:100%;
 		flex-basis:100%;
 		transition: 1s;
 	}
+
 	.entry-content{
 		position: absolute;
 		left:5%;
@@ -73,15 +76,18 @@
     margin-right: auto;
     width: 90%;
 	}
+
 	.icon{
     width: 4rem;
     position: absolute;
     right: 0;
     top: 0;
 	}
+
 	.location{
 		display:flex;
 	}
+
 	.days{
 		display:flex;
 	}
@@ -108,6 +114,7 @@
 		.title{
 			margin-top:0.5rem;
 		}
+		
 		.wrapper {
 			padding-top: 3.5rem;
 		}
