--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -843,6 +843,8 @@ object {
       color: #ffffff;
       height: 900px;
       background-size: cover; } }
+  .term-seasonal article .content {
+    overflow-wrap: break-word; }
 
 .term-seasonal .entry-wrapper {
   padding-left: 2.5%;
@@ -887,6 +889,42 @@ object {
         color: white; }
   .sub-nav .current-event-page {
     font-weight: 900; }
+
+@media (min-width: 750px) {
+  .tax-event_type .widget-area {
+    display: none; } }
+
+.tax-event_type .widget-area .csl-social-media-class {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 1rem;
+  z-index: 1; }
+  .tax-event_type .widget-area .csl-social-media-class h2 {
+    font-size: 0.95rem;
+    margin-bottom: 0; }
+  .tax-event_type .widget-area .csl-social-media-class a {
+    color: #000000;
+    text-decoration: none;
+    font-size: 1rem; }
+  .tax-event_type .widget-area .csl-social-media-class a:hover {
+    color: #1DAFB8; }
+  .tax-event_type .widget-area .csl-social-media-class .fa {
+    font-size: 1.5rem;
+    padding-right: 1rem; }
+  .tax-event_type .widget-area .csl-social-media-class a:nth-child(3) {
+    padding-top: 0.5rem; }
+
+.tax-event_type .widget-area .social-media-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  margin-right: 1rem; }
 
 /* MOBILE MENU	*/
 .display {
