--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -2396,19 +2396,6 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
   border: none;
   background: white; }
 
-/**
- * Owl Carousel v2.2.1
- * Copyright 2013-2017 David Deutsch
- * Licensed under  ()
- */
-/*
- * 	Default theme - Owl Carousel CSS File
- */
-.owl-theme-event-main .owl-nav {
-  -webkit-tap-highlight-color: transparent; }
-  .owl-theme-event-main .owl-nav.disabled {
-    display: none; }
-
 .error404 .content-area {
   padding-top: 3.75rem; }
 
@@ -2469,3 +2456,105 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
 @media screen and (min-width: 750px) {
   .error404 .eagle-one {
     top: 20%; } }
+
+.single-event .site-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  width: 100%; }
+  @media (min-width: 750px) {
+    .single-event .site-main {
+      height: 950px; } }
+
+.single-event article {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  width: 100%; }
+  @media (min-width: 750px) {
+    .single-event article {
+      -webkit-box-flex: 0;
+          -ms-flex: 0 0 100%;
+              flex: 0 0 100%;
+      width: 26%;
+      -webkit-box-ordinal-group: 1;
+          -ms-flex-order: 0;
+              order: 0;
+      overflow-y: scroll; } }
+
+.single-event .owl-event-main {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+  width: 100%; }
+  @media (min-width: 750px) {
+    .single-event .owl-event-main {
+      -webkit-box-ordinal-group: 1;
+          -ms-flex-order: 0;
+              order: 0;
+      -webkit-box-flex: 0;
+          -ms-flex: 0 0 740px;
+              flex: 0 0 740px;
+      width: 74%; }
+      .single-event .owl-event-main .owl-nav {
+        display: none; }
+      .single-event .owl-event-main .owl-dots {
+        display: none; } }
+  .single-event .owl-event-main .owl-stage *:not(img) {
+    height: 350px; }
+    @media (min-width: 750px) {
+      .single-event .owl-event-main .owl-stage *:not(img) {
+        height: 740px; } }
+  .single-event .owl-event-main .owl-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    overflow: hidden; }
+  .single-event .owl-event-main img {
+    height: 350px;
+    width: auto;
+    max-width: none; }
+  @media (min-width: 750px) {
+    .single-event .owl-event-main img {
+      max-width: 100%;
+      width: auto;
+      max-height: 100%;
+      height: auto; } }
+
+.single-event .owl-event-thumbs {
+  width: 100%;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3; }
+  .single-event .owl-event-thumbs .owl-nav {
+    display: none; }
+  .single-event .owl-event-thumbs .owl-dots {
+    display: none; }
+  @media (min-width: 750px) {
+    .single-event .owl-event-thumbs {
+      -webkit-box-ordinal-group: 1;
+          -ms-flex-order: 0;
+              order: 0;
+      width: 74%;
+      -webkit-box-flex: 0;
+          -ms-flex: 0 0 210px;
+              flex: 0 0 210px; }
+      .single-event .owl-event-thumbs .owl-nav {
+        display: initial; }
+      .single-event .owl-event-thumbs .owl-dots {
+        display: initial; }
+      .single-event .owl-event-thumbs img {
+        width: 160px;
+        width: auto;
+        height: 160px;
+        height: auto; } }
