--- a/themes/csl/sass/_seasonal-events.scss
+++ b/themes/csl/sass/_seasonal-events.scss
@@ -23,6 +23,9 @@
       background: $trans-black;
       width: 60%;
       padding-right: 5%;
+      p {
+        font-size: 18px;
+      }
     }
   }
 }
@@ -69,6 +72,18 @@
 
 // SEASONAL WIDGET AREA //
 .tax-event_type {
+  .entry-content {
+    .time,
+    .date,
+    .location
+    {
+    width: 100%;
+    display: block;
+    }
+    .time {
+      font-weight: bold;
+    }
+  }
   .widget-area {
     @include desktop {
       display: none;
@@ -79,6 +94,7 @@
       margin: 0 1rem;
       z-index: 1;
       h2 {
+        width: 100%;
         font-size: 0.95rem;
         margin-bottom: 0;
       }
