--- a/themes/csl/sass/_footer.scss
+++ b/themes/csl/sass/_footer.scss
@@ -25,6 +25,7 @@
 	justify-content: space-between;
 	height:20rem;
 	padding-top:2rem;
+	padding-bottom: 2rem;
 }
 .footer-logo-container{
 	background:url("../../images/footer-icon.png");
