--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1154,7 +1154,6 @@ header {
 
 .footer-nav-wrapper {
   font-size: 1.25rem;
-  margin-left: 11vw;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%; }
   .footer-nav-wrapper a {
@@ -1175,7 +1174,10 @@ header {
           justify-content: baseline;
   margin: 0;
   max-height: 6rem;
-  list-style: none; }
+  list-style: none;
+  padding-left: 17vw; }
+  .footer-nav li:nth-last-child(-n+3) {
+    margin-left: 5rem; }
 
 .footer-container {
   display: -webkit-box;
@@ -1192,10 +1194,10 @@ header {
 .footer-logo-container {
   background: url("../../images/footer-icon.png");
   border-radius: 50%;
-  width: 28vw;
-  height: 26vw;
+  width: 20vw;
+  height: 20vw;
   background-color: #fff;
-  background-size: 20vw;
+  background-size: 15vw;
   background-position: 50%;
   background-repeat: no-repeat;
   margin-left: 10%;
@@ -1216,6 +1218,8 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-preferred-size: 59%;
+      flex-basis: 59%;
   color: white;
   border-left: 1px solid white;
   -webkit-box-ordinal-group: 4;
@@ -1272,14 +1276,19 @@ header {
     position: absolute;
     width: 65vw;
     bottom: 24%;
-    left: 9%; }
+    left: 9%;
+    padding-left: 1rem; }
+    .footer-nav li:nth-last-child(-n+3) {
+      margin-left: 0; }
   .footer-logo-container {
     height: 11vw;
     width: 12vw;
     margin-left: 1%;
     background-size: 9vw; }
   .footer-contact-info {
-    font-size: 0.75rem; }
+    font-size: 0.75rem;
+    -ms-flex-preferred-size: 27%;
+        flex-basis: 27%; }
   .sub-menu {
     font-size: 0.75rem;
     font-weight: lighter;
