--- a/themes/csl/sass/_footer.scss
+++ b/themes/csl/sass/_footer.scss
@@ -118,7 +118,10 @@
  }
  .footer-contact-info{
 	 font-size:0.75rem;
-	 flex-basis:27%;
+	 flex-basis:23%;
+	 >p:nth-child(1){
+		 font-size:1rem;
+	 }
  }
  .sub-menu{
 	 font-size:0.75rem;
@@ -135,3 +138,4 @@
 	 }
  }
 }	
+
