fixed margins for frontpage

--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -54,6 +54,7 @@
       padding-left: 12vw;
       padding-right: 12vw;
       padding-bottom: 28%;
+      margin-bottom: 0;
     }
   }
   .entry-content{
