--- a/themes/csl/sass/_seasonal-events.scss
+++ b/themes/csl/sass/_seasonal-events.scss
@@ -78,9 +78,12 @@
   }
   .alt-title {
     margin-left: 5px;
+    font-weight: 400;
   }
   .date{
+    @include desktop {
     font-size: 25px;
+    }
   }
   .entry-content{
     margin-top: 0;
