added a max height to weekly event title, changed font size of weekly event content to be able to fit more words on mobile

--- a/themes/csl/sass/_seasonal-events.scss
+++ b/themes/csl/sass/_seasonal-events.scss
@@ -71,7 +71,7 @@
 }
 
 // SEASONAL WIDGET AREA //
-.tax-event_type {
+.term-seasonal {
   .title {
     text-transform: uppercase;
     margin-bottom: 0;
