--- a/themes/csl/sass/_weekly-events.scss
+++ b/themes/csl/sass/_weekly-events.scss
@@ -32,6 +32,7 @@
 		display: flex;
     justify-content: center;
 		align-items: center;
+		height:100%;
 		flex-basis:90%;
 		color:white;
 		padding-top: 1rem;
@@ -74,7 +75,12 @@
 		display: none;
 		margin-left: auto;
     margin-right: auto;
-    width: 90%;
+		width: 90%;
+		.content{
+			p{
+				font-size:1rem;
+			}
+		}
 	}
 
 	.icon{
@@ -140,6 +146,11 @@
 		.entry-content{
 			top:20%;
 			font-size:1.5rem;
+			.content{
+				p{
+					font-size:1.5rem;
+				}
+			}
 		}
 		.icon{
 			width:6rem;
