--- a/themes/csl/sass/_story.scss
+++ b/themes/csl/sass/_story.scss
@@ -18,6 +18,11 @@
       }
     }
 
+    .hash-holder {
+      position: relative;
+      top: -146px;
+    }
+
     h1 {
       margin: 0;
       padding: 0 2.5%;
@@ -111,6 +116,11 @@
       background-color: yellow;
       background: url("../../images/eagle-background.png") repeat top;
       background-size: contain;
+
+      include desktop {
+        background: url("../../images/eagle-background.png") repeat top;
+        background-size: contain;
+      }
       
       .meet-our-team-title {
         padding-top: $base__space-unit;
@@ -141,7 +151,7 @@
       }
 
       .team-member {
-        flex: 0 1 40%;
+        flex-basis: 40%;
         display: flex;
         flex-flow: column nowrap;
         justify-content: space-between;
@@ -226,7 +236,7 @@
 
       @include desktop {
         // width: 40vw;
-        flex: 0 2 50%;
+        flex-basis: 50%;
         margin: 0 0 $base__space-unit 2.5vw;
         
         img {
@@ -236,7 +246,7 @@
     }
     
     .entry-content {
-      flex: 0 1 50%;
+      flex-basis: 50%;
       margin: 0;
     }
     
@@ -377,7 +387,7 @@
 
       @include desktop {
         order: 2;
-        flex: 0 2 50%;
+        flex-basis: 50%;
         padding: 2.5%;
         max-height: 50%;
         margin-bottom: $base__space-unit;
@@ -385,21 +395,29 @@
     }
 
     .heritage-image-two {
-      display: none;
+      height: auto;
+      max-height: 100%;
+
+      img {
+        min-width: 100%;
+        min-height: 100%;
+        max-height: 75vh;
+      }
 
       @include desktop {
         order: 3;
-        flex: 0 2 50%;
+        flex-basis: 50%;
         display: inherit;
         padding: 2.5%;
-        margin-bottom: $base__space-unit;        
+        margin-bottom: $base__space-unit;
+        width: 100%;     
       }
     }
     
     .entry-content {
 
       @include desktop {
-        flex: 0 1 100%;
+        flex-basis: 100%;
         margin: 0;
         column-count: 2;
         column-gap: $base__space-unit*2;
@@ -409,8 +427,4 @@
   }
 
 /* End of Heritage */
-}
-.hash-holder {
-  position: relative;
-  top: -146px;
 }
