--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1807,6 +1807,9 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
         color: #ffffff;
         background-color: #000000;
         width: 30%; } }
+    .single-story .entry-header .hash-holder, .post-type-archive-story .entry-header .hash-holder {
+      position: relative;
+      top: -146px; }
     .single-story .entry-header h1, .post-type-archive-story .entry-header h1 {
       margin: 0;
       padding: 0 2.5%; }
@@ -1870,6 +1873,9 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
     background-color: yellow;
     background: url("../../images/eagle-background.png") repeat top;
     background-size: contain; }
+    .single-story .one-house-container .meet-our-team-wrapper include desktop, .post-type-archive-story .one-house-container .meet-our-team-wrapper include desktop {
+      background: url("../../images/eagle-background.png") repeat top;
+      background-size: contain; }
     .single-story .one-house-container .meet-our-team-wrapper .meet-our-team-title, .post-type-archive-story .one-house-container .meet-our-team-wrapper .meet-our-team-title {
       padding-top: 1.5rem; }
       @media (min-width: 750px) {
@@ -1904,9 +1910,8 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
         -ms-flex-pack: distribute;
             justify-content: space-around; } }
     .single-story .one-house-container .meet-our-team .team-member, .post-type-archive-story .one-house-container .meet-our-team .team-member {
-      -webkit-box-flex: 0;
-          -ms-flex: 0 1 40%;
-              flex: 0 1 40%;
+      -ms-flex-preferred-size: 40%;
+          flex-basis: 40%;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -1984,16 +1989,14 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
         max-height: 75vh; }
       @media (min-width: 750px) {
         .single-story .origin-wrapper .origin-featured-image, .post-type-archive-story .origin-wrapper .origin-featured-image {
-          -webkit-box-flex: 0;
-              -ms-flex: 0 2 50%;
-                  flex: 0 2 50%;
+          -ms-flex-preferred-size: 50%;
+              flex-basis: 50%;
           margin: 0 0 1.5rem 2.5vw; }
           .single-story .origin-wrapper .origin-featured-image img, .post-type-archive-story .origin-wrapper .origin-featured-image img {
             min-height: 10%; } }
     .single-story .origin-wrapper .entry-content, .post-type-archive-story .origin-wrapper .entry-content {
-      -webkit-box-flex: 0;
-          -ms-flex: 0 1 50%;
-              flex: 0 1 50%;
+      -ms-flex-preferred-size: 50%;
+          flex-basis: 50%;
       margin: 0; }
     .single-story .origin-wrapper .origin-image-two img, .post-type-archive-story .origin-wrapper .origin-image-two img {
       min-width: 100%;
@@ -2103,40 +2106,39 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
         -webkit-box-ordinal-group: 3;
             -ms-flex-order: 2;
                 order: 2;
-        -webkit-box-flex: 0;
-            -ms-flex: 0 2 50%;
-                flex: 0 2 50%;
+        -ms-flex-preferred-size: 50%;
+            flex-basis: 50%;
         padding: 2.5%;
         max-height: 50%;
         margin-bottom: 1.5rem; } }
   .single-story .heritage-container .heritage-image-two, .post-type-archive-story .heritage-container .heritage-image-two {
-    display: none; }
+    height: auto;
+    max-height: 100%; }
+    .single-story .heritage-container .heritage-image-two img, .post-type-archive-story .heritage-container .heritage-image-two img {
+      min-width: 100%;
+      min-height: 100%;
+      max-height: 75vh; }
     @media (min-width: 750px) {
       .single-story .heritage-container .heritage-image-two, .post-type-archive-story .heritage-container .heritage-image-two {
         -webkit-box-ordinal-group: 4;
             -ms-flex-order: 3;
                 order: 3;
-        -webkit-box-flex: 0;
-            -ms-flex: 0 2 50%;
-                flex: 0 2 50%;
+        -ms-flex-preferred-size: 50%;
+            flex-basis: 50%;
         display: inherit;
         padding: 2.5%;
-        margin-bottom: 1.5rem; } }
+        margin-bottom: 1.5rem;
+        width: 100%; } }
   @media (min-width: 750px) {
     .single-story .heritage-container .entry-content, .post-type-archive-story .heritage-container .entry-content {
-      -webkit-box-flex: 0;
-          -ms-flex: 0 1 100%;
-              flex: 0 1 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
       margin: 0;
       -webkit-column-count: 2;
               column-count: 2;
       -webkit-column-gap: 3rem;
               column-gap: 3rem;
       color: #ffffff; } }
-
-.hash-holder {
-  position: relative;
-  top: -146px; }
 
 /**
  * Owl Carousel v2.2.1
