--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -155,6 +155,7 @@
             min-height: 135px;
             margin: 0;
             padding: .5rem 1rem 1rem 1rem;
+            font-size: 1rem;
           }
           img {
             min-width: 440px;
