fixed hero image

--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -95,7 +95,7 @@
      
     }
     .hero-container {
-      background-position: center;
+      background-position: 80%;
       height: 85vh;
       img {
         height: 22%;
