--- a/themes/csl/sass/_contact-page.scss
+++ b/themes/csl/sass/_contact-page.scss
@@ -60,7 +60,8 @@
     top: -1.35%;
     left: 5%;
     text-transform: uppercase;
-    font-size: 30px;
+		font-size: 30px;
+		margin-top:0.5rem;
 	}
 	.contact-page-contact-info{
 		display: flex;
