cleaned up code, added indentation

--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -953,7 +953,7 @@ object {
           align-items: baseline;
   margin-right: 1rem; }
 
-/* MOBILE MENU	*/
+/* MOBILE HEADER	*/
 .display {
   display: block; }
 
