--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -1,236 +1,237 @@
-/* MOBILE MENU	*/
-.display{
-	display:block
-}
-.header-widget-area{
-	padding-right:1%;
-	.csl-social-media-class{
-	display:flex;
-	flex-direction:row;
-	font-size: 1.25rem;
-	margin-bottom: 0;
-	align-items: flex-end;
-	height: 4.5rem;
-	}
-	.social-media-container{
-		padding-right:0.5rem;
-	}
-	a{
-		color:white;
-	}
-	a:hover{
-		color:$teal;
-	}
-	p{
-		display:none;
-	}
-}
-.line1, .line2, .line3 {
-	margin-top:5px;
-	background-color:white;
-	width:25px;
-	height:3px;
-	display:block;
-	position:relative;
-	opacity:1.0;
-	border-radius:15%;
-	transition: all .3s;
-}	
-.menu-toggle{
-	display:none;
-}
-.toggle-open{
-	outline:transparent;
-	border: none;
-	background:none;
-	position:absolute;
-	z-index:9999;
-	top:34%;
-}
-
-.mobile-menu{
-	display: none;
-	z-index:2; 
-	font-size:1rem;
-	width:100%; 
-	height:auto;
-	background:$teal;
-	position:fixed; 
-	padding-top : 5.75rem; 
-	text-align:left;
-	min-height: 79vh;
-	max-height: 100vh;
-	overflow-y: scroll;
-}
-
-.mobile-menu ul {
-	text-transform:uppercase;
-	margin: 0;
-	padding: 0; 
-	li:nth-child(odd){
-		background-color:$secondary-teal;
-	}
-}
-
-.mobile-menu li {
-	display: flex; 
-	padding:1rem 0 1rem 0; 
-	padding-left:1rem;
-}
-
-.mobile-menu a{
-	width:100%;
-	text-decoration:none;
-	color:white;
-}
-
-header{
-	display:inline-block; 
-	font-size:12px;
-}
-.main-navigation{
-	display:flex;
-	justify-content: space-between;
-		.social-icons{
-		display:flex;
-		align-self:center;
-		margin-top: 2rem;
-		.fa{
-			color:white;
-			font-size:1.5rem;
-			padding-right:1rem;
-		}
-	}
-}	
-
-.site-header{
-	width: 100%;
-	background: black;
-	height: 5.75rem;
-	position: fixed;
-	z-index: 99999999999;
-}
-.header-teal{
-	background:$teal;
-}
-.content-area {
-	padding-top: 5.75rem;
-}
-.header-logo{
-	height: 40px;
-	width:135px;
-	position: absolute;
-	top: 34%;
-	@include center();
-	left: 25%;
-	right: 25%;
-}
-
-.desktop-site-header{
-	display:none;
-}
-.menu-menu-1-container{
-	visibility: hidden;
-}
-.desktop-header-logo{
-	display:none;
-}
-
-// ANIMATION FOR MOBILE MENU //
-  .line1-active {
-    transform: rotate(225deg);
-    top: 8px;
-  }
-      
-  .line2-active {
-    transform: rotate(45deg);
-  }
-      
-  .line3-active {
-    transform: rotate(-45deg);
-    top:-7px;
-  }
-// DESKTOP HEADER //
-@media screen  and (min-width:$desktop-width){
-	.site-header{
-		background:$black !important;
-	}
-	.toggle-open{
-		display:none;
-	}
-	.header-logo{
-		display:none;
-	}
-	.desktop-site-header{
-		display: block;
-		width: 100%;
-		background: black;
-		height: 147px;
-		position: relative;
-	}
-	
-	.main-navigation {
-		height: 5.25rem;
-		margin: 43px 0 0;
-
-	}
-	.menu{
-		display: flex;
-		justify-content: space-between;
-		align-items: flex-end;
-    width: 56vw;
-		margin: 0;
-		li{
-			a{
-				color:white;
-				text-transform: uppercase;
-			}
-		}
-	}
-	.menu-menu-1-container{
-		visibility: visible;
-		max-width: 60%;
-    flex-basis: 90%;
-    display: flex;
-    font-size: 1.25rem;
-    margin-left: auto;
-	}
-	.site-header {
-		height: 147px;
-
-	}
-	.content-area {
-		padding-top: 147px;
+	/* MOBILE HEADER	*/
+	.display{
+		display:block
 	}
 	.header-widget-area{
-		position: absolute;
-		right: 0;
-		height: 0;
-		top: 0;
+		padding-right:1%;
 		.csl-social-media-class{
-			height:2.5rem;
+		display:flex;
+		flex-direction:row;
+		font-size: 1.25rem;
+		margin-bottom: 0;
+		align-items: flex-end;
+		height: 4.5rem;
+		}
+		.social-media-container{
+			padding-right:0.5rem;
+		}
+		a{
+			color:white;
+		}
+		a:hover{
+			color:$teal;
+		}
+		p{
+			display:none;
 		}
 	}
-}	
+	.line1, .line2, .line3 {
+		margin-top:5px;
+		background-color:white;
+		width:25px;
+		height:3px;
+		display:block;
+		position:relative;
+		opacity:1.0;
+		border-radius:15%;
+		transition: all .3s;
+	}	
+	.menu-toggle{
+		display:none;
+	}
+	.toggle-open{
+		outline:transparent;
+		border: none;
+		background:none;
+		position:absolute;
+		z-index:9999;
+		top:34%;
+	}
+
+	.mobile-menu{
+		display: none;
+		z-index:2; 
+		font-size:1rem;
+		width:100%; 
+		height:auto;
+		background:$teal;
+		position:fixed; 
+		padding-top : 5.75rem; 
+		text-align:left;
+		min-height: 79vh;
+		max-height: 100vh;
+		overflow-y: scroll;
+	}
+
+	.mobile-menu ul {
+		text-transform:uppercase;
+		margin: 0;
+		padding: 0; 
+		li:nth-child(odd){
+			background-color:$secondary-teal;
+		}
+	}
+
+	.mobile-menu li {
+		display: flex; 
+		padding:1rem 0 1rem 0; 
+		padding-left:1rem;
+	}
+
+	.mobile-menu a{
+		width:100%;
+		text-decoration:none;
+		color:white;
+	}
+
+	header{
+		display:inline-block; 
+		font-size:12px;
+	}
+	.main-navigation{
+		display:flex;
+		justify-content: space-between;
+			.social-icons{
+			display:flex;
+			align-self:center;
+			margin-top: 2rem;
+			.fa{
+				color:white;
+				font-size:1.5rem;
+				padding-right:1rem;
+			}
+		}
+	}	
+
+	.site-header{
+		width: 100%;
+		background: black;
+		height: 5.75rem;
+		position: fixed;
+		z-index: 99999999999;
+	}
+	.header-teal{
+		background:$teal;
+	}
+	.content-area {
+		padding-top: 5.75rem;
+	}
+	.header-logo{
+		height: 40px;
+		width:135px;
+		position: absolute;
+		top: 34%;
+		@include center();
+		left: 25%;
+		right: 25%;
+	}
+
+	.desktop-site-header{
+		display:none;
+	}
+	.menu-menu-1-container{
+		visibility: hidden;
+	}
+	.desktop-header-logo{
+		display:none;
+	}
+
+// ANIMATION FOR MOBILE MENU //
+		.line1-active {
+			transform: rotate(225deg);
+			top: 8px;
+		}
+				
+		.line2-active {
+			transform: rotate(45deg);
+		}
+				
+		.line3-active {
+			transform: rotate(-45deg);
+			top:-7px;
+		}
+
+// DESKTOP HEADER //
+	@media screen  and (min-width:$desktop-width){
+		.site-header{
+			background:$black !important;
+		}
+		.toggle-open{
+			display:none;
+		}
+		.header-logo{
+			display:none;
+		}
+		.desktop-site-header{
+			display: block;
+			width: 100%;
+			background: black;
+			height: 147px;
+			position: relative;
+		}
+		
+		.main-navigation {
+			height: 5.25rem;
+			margin: 43px 0 0;
+
+		}
+		.menu{
+			display: flex;
+			justify-content: space-between;
+			align-items: flex-end;
+			width: 56vw;
+			margin: 0;
+			li{
+				a{
+					color:white;
+					text-transform: uppercase;
+				}
+			}
+		}
+		.menu-menu-1-container{
+			visibility: visible;
+			max-width: 60%;
+			flex-basis: 90%;
+			display: flex;
+			font-size: 1.25rem;
+			margin-left: auto;
+		}
+		.site-header {
+			height: 147px;
+
+		}
+		.content-area {
+			padding-top: 147px;
+		}
+		.header-widget-area{
+			position: absolute;
+			right: 0;
+			height: 0;
+			top: 0;
+			.csl-social-media-class{
+				height:2.5rem;
+			}
+		}
+	}	
 
 // MEDIA BREAK FOR HEADER LOGO SCALING //
-@media screen  and (min-width:750px){
-	
-	.desktop-header-logo{
-		display:block;
-		position: absolute;
-		height: 4rem;
-		margin: 63px 0 0 0.75rem;
-		width: auto;
+	@media screen  and (min-width:750px){
+		
+		.desktop-header-logo{
+			display:block;
+			position: absolute;
+			height: 4rem;
+			margin: 63px 0 0 0.75rem;
+			width: auto;
+		}
 	}
-}
-@media screen  and (min-width:1024px){
-	
-	.desktop-header-logo{
-		display:block;
-		position: absolute;
-		height: 5.25rem;
-		margin: 43px 0 0 0.75rem;
-		width: auto;
+	@media screen  and (min-width:1024px){
+		
+		.desktop-header-logo{
+			display:block;
+			position: absolute;
+			height: 5.25rem;
+			margin: 43px 0 0 0.75rem;
+			width: auto;
+		}
 	}
-}
